feat: 项目共有配置转移nacos，网关、跨域配置，日志本地存储，框架搭建完成

--- a/risk-warning-gateway/pom.xml
+++ b/risk-warning-gateway/pom.xml
@@ -47,11 +47,6 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
-        <!-- Reactor Netty -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
 
         <!-- Redis for rate limiting -->
         <dependency>
@@ -59,11 +54,11 @@
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
 
-        <!-- Common Module -->
+        <!-- Lombok -->
         <dependency>
-            <groupId>com.riskwarning</groupId>
-            <artifactId>risk-warning-common</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
