--- a/risk-warning-enterprise/pom.xml
+++ b/risk-warning-enterprise/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
