--- a/risk-warning-matching-calculation/pom.xml
+++ b/risk-warning-matching-calculation/pom.xml
@@ -95,6 +95,13 @@
             <version>2.3.4</version>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
