--- a/risk-warning-notification/pom.xml
+++ b/risk-warning-notification/pom.xml
@@ -71,6 +71,13 @@
             <artifactId>netty-all</artifactId>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Common Module -->
         <dependency>
             <groupId>com.riskwarning</groupId>
