--- a/risk-warning-report/pom.xml
+++ b/risk-warning-report/pom.xml
@@ -96,6 +96,12 @@
             <version>5.2.4</version>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
