feat: bootstrap.yml配置统一

--- a/risk-warning-behavior-processing/src/main/resources/bootstrap.yml
+++ b/risk-warning-behavior-processing/src/main/resources/bootstrap.yml
@@ -1,15 +1,6 @@
 spring:
+  profiles:
+    active: common
   application:
     name: risk-warning-behavior-processing
-  cloud:
-    nacos:
-      config:
-        server-addr: 8.154.16.225:8848
-        file-extension: yml
-        group: DEFAULT_GROUP
-        shared-configs:
-          - data-id: common-dev.yaml
-      discovery:
-        enabled: true
-        server-addr: 8.154.16.225:8848
 
