--- a/risk-warning-project/src/main/resources/bootstrap.yml
+++ b/risk-warning-project/src/main/resources/bootstrap.yml
@@ -1,14 +1,5 @@
 spring:
+  profiles:
+    active: common
   application:
     name: risk-warning-project
-  cloud:
-    nacos:
-      config:
-        server-addr: 8.154.16.225:8848
-        file-extension: yml
-        group: DEFAULT_GROUP
-        shared-configs:
-          - data-id: common-dev.yaml
-      discovery:
-        enabled: true
-        server-addr: 8.154.16.225:8848
