--- a/risk-warning-processing/src/main/resources/bootstrap.yml
+++ b/risk-warning-processing/src/main/resources/bootstrap.yml
@@ -2,5 +2,5 @@ spring:
   profiles:
     active: common
   application:
-    name: risk-warning-behavior-processing
+    name: risk-warning-processing
 
