--- a/risk-warning-org/src/main/resources/application.yml
+++ b/risk-warning-org/src/main/resources/application.yml
@@ -4,3 +4,19 @@ server:
 #jwt:
 #  secret: risk-warning-platform-jwt-secret-key-2023
 #  expiration: 86400
+
+# 打开 AOP 和包级别的 DEBUG 日志，便于查看切面匹配与代理创建
+logging:
+  level:
+    org.springframework.aop: DEBUG
+    com.riskwarning.common: DEBUG
+    com.riskwarning.org: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+spring:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
