--- a/risk-warning-processing/pom.xml
+++ b/risk-warning-processing/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- Spring Batch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-batch</artifactId>
+        </dependency>
+
         <!-- Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
