--- a/risk-warning-common/pom.xml
+++ b/risk-warning-common/pom.xml
@@ -102,5 +102,13 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.21.1</version> <!-- 或者与你当前 Spring Boot / Hibernate 版本兼容的 2.x 版本 -->
+        </dependency>
+
+        <!-- (removed hibernate-types dependency: using AttributeConverter for arrays) -->
     </dependencies>
 </project>
